# HSIM-for-Eigen

./: .gitignore  CMakeLists.txt  CMakePresets.json  HSIM  HSIM.cpp  HSIM.h  README.md  creat_cube.py  cube_mesh.off  cube_mesh500.off  cube_mesh6000.off  gen_U.cpp  laplace_3d.cpp  main.cpp  test.py  testing.cpp
build-debug/: CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  compile_commands.json
build-debug/.cmake/api/v1/reply/: cache-v2-5f64291aa9bb2e7e910f.json  cmakeFiles-v1-3541037ec4a976b07823.json  codemodel-v2-5a6b86d95de34177722f.json  directory-_deps.eigen3-build-Debug-204c8ed85f7608945d05.json  directory-_deps.eigen3-build.bench.spbench-Debug-9ad315bcec5b33ac1731.json  directory-_deps.eigen3-build.blas-Debug-2d2cc700049e462f54b8.json  directory-_deps.eigen3-build.lapack-Debug-49cf6b506956d26583f2.json  directory-_deps.eigen3-build.scripts-Debug-93d1ae2508f89913e982.json  directory-_deps.eigen3-build.unsupported-Debug-e88f642d6a3d3fe58c5d.json  directory-_deps.eigen3-build.unsupported.Eigen-Debug-7d669b737c3fa53c1ed2.json  directory-_deps.eigen3-build.unsupported.Eigen.CXX11-Debug-4828c3b9903284dd38e0.json  directory-_deps.fast_matrix_market-build-Debug-93c45cb19f89c9d44375.json  directory-_deps.spectra-build-Debug-0481b91544c739346b21.json  (+141 more)
build-debug/CPM_modules/: Findfast_matrix_market.cmake
build-release/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  HSIM  amd_demo  amd_demo2  amd_l_demo  amd_simple  build.ninja  camd_demo  camd_demo2  camd_l_demo  camd_simple  cholmod_demo  cholmod_l_demo  cholmod_simple  colamd_example  colamd_l_example  compile_commands.json  cs_ci_demo1  cs_ci_demo2  cs_ci_demo3  cs_cl_demo1  cs_cl_demo2  cs_cl_demo3  cs_demo1  cs_demo2  cs_demo3  cs_di_demo1  cs_di_demo2  cs_di_demo3  cs_dl_demo1  cs_dl_demo2  cs_dl_demo3  cs_idemo  cs_ldemo  klu_simple  kludemo  kluldemo  (+15 more)
build-release/CPM_modules/: FindEigen3.cmake  FindSuiteSparse.cmake  Findspectra.cmake
run/demo1/: HSIM  mass.mtx  run.sh
run/demo2_gen_u/: cube_mesh.vtk  gen_U  run.sh
src/: CMakeLists.txt  HSIM.cpp  HSIM.h  laplace_3d.h  save_spm.hpp  testing.h
test/: 500.txt  creat_ball.py  creat_cube.py  sphere_mesh10000.off  temp.cpp
